exports[`test Option: disabled (false) 1`] = `
"<a tabindex="0" class="pe-button pe-text-button">
<div class="pe-button__content">
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-button__label">
    Not disabled
  </div>
</div></a>
"
`;

exports[`test Option: disabled (true) 1`] = `
"<a tabindex="-1" disabled class=
"pe-button pe-text-button pe-button--disabled">
<div class="pe-button__content">
  <div class="pe-button__label">
    Disabled
  </div>
</div></a>
"
`;

exports[`test Option: formaction 1`] = `
"<a formaction="http://polythene.js.org" tabindex="0" class=
"pe-button pe-text-button">
<div class="pe-button__content">
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-button__label">
    Form action
  </div>
</div></a>
"
`;

exports[`test Option: inactivate (2) 1`] = `
"<a tabindex="0" class="pe-button pe-text-button">
<div class="pe-button__content">
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-button__label">
    Inactivated for 2s
  </div>
</div></a>
"
`;

exports[`test Option: inactive (false) 1`] = `
"<a tabindex="0" class="pe-button pe-text-button">
<div class="pe-button__content">
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-button__label">
    Not inactive
  </div>
</div></a>
"
`;

exports[`test Option: inactive (true) 1`] = `
"<a tabindex="-1" class=
"pe-button pe-text-button pe-button--inactive">
<div class="pe-button__content">
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-button__label">
    Inactive
  </div>
</div></a>
"
`;

exports[`test Option: ink (false) 1`] = `
"<a tabindex="0" class="pe-button pe-text-button">
<div class="pe-button__content">
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-button__label">
    No ink
  </div>
</div></a>
"
`;

exports[`test Option: label -- dark theme 1`] = `
"<a tabindex="0" class="pe-button pe-text-button">
<div class="pe-button__content">
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-button__label">
    Label
  </div>
</div></a>
"
`;

exports[`test Option: label 1`] = `
"<a tabindex="0" class="pe-button pe-text-button">
<div class="pe-button__content">
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-button__label">
    Label
  </div>
</div></a>
"
`;

exports[`test Option: selected 1`] = `
"<a tabindex="0" class=
"pe-button pe-text-button pe-button--selected">
<div class="pe-button__content">
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-button__label">
    Selected
  </div>
</div></a>
"
`;

exports[`test Option: style (colors) 1`] = `
"<a tabindex="0" class="pe-button pe-text-button">
<div style=
"background-color: rgb(239, 108, 0); color: rgb(255, 255, 255);"
class="pe-button__content">
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-button__label">
    Styled
  </div>
</div></a>
"
`;

exports[`test Option: url (with oncreate) 1`] = `
"<a tabindex="0" href="#!/shadow" class="pe-button pe-text-button">
<div class="pe-button__content">
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-button__label">
    Go to /#/shadow
  </div>
</div></a>
"
`;

exports[`test Option: url (without oncreate) 1`] = `
"<a tabindex="0" href="/shadow" class="pe-button pe-text-button">
<div class="pe-button__content">
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-button__label">
    Go to /shadow
  </div>
</div></a>
"
`;

exports[`test Option: wash (false) 1`] = `
"<a tabindex="0" class="pe-button pe-text-button">
<div class="pe-button__content">
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__focus"></div>
  <div class="pe-button__label">
    No wash
  </div>
</div></a>
"
`;

exports[`test Themed button (colors) 1`] = `
"<a tabindex="0" class=
"pe-button pe-text-button tests-button-themed-button">
<div class="pe-button__content">
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-button__label">
    Themed button
  </div>
</div></a>
"
`;

exports[`test Themed button -- dark theme 1`] = `
"<a tabindex="0" class=
"pe-button pe-text-button tests-button-themed-button">
<div class="pe-button__content">
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-button__label">
    Themed button
  </div>
</div></a>
"
`;

exports[`test Themed button blue on dark -- dark theme 1`] = `
"<a tabindex="0" class=
"pe-button pe-text-button blue-on-dark-button">
<div class="pe-button__content">
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-button__label">
    Blue on dark button
  </div>
</div></a>
"
`;

exports[`test Themed button: (option: borders) -- dark theme 1`] = `
"<a tabindex="0" class=
"pe-button pe-text-button pe-button--borders tests-button-bordered-button">
<div class="pe-button__content">
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-button__label">
    Borders dark theme
  </div>
</div></a>
"
`;

exports[`test Themed button: (option: borders) 1`] = `
"<a tabindex="0" class=
"pe-button pe-text-button pe-button--borders tests-button-bordered-button">
<div class="pe-button__content">
  <div class="pe-ripple pe-ripple--constrained">
    <div class="pe-ripple__mask">
      <div class="pe-ripple__waves"></div>
    </div>
  </div>
  <div class="pe-button__wash"></div>
  <div class="pe-button__focus"></div>
  <div class="pe-button__label">
    Borders
  </div>
</div></a>
"
`;
